2005-09-16  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c:
	(bookmark_activate_with_flags), (open_in_tab_activate_cb),
	(open_in_window_activate_cb), (activate_cb):
	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
	Repair the previous b0rkage, see previous log

2005-09-15  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
	If the search term is empty for a smart bookmark use the normal
	URL instead of the smart url with the %s replaced by ""

2005-09-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialog.cpp:

	Don't focus the checkbox initially. Fixes bug #163371.

2005-09-15  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_construct):

	Make Close the default button.

2005-09-09  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphySingle.cpp:

	Manually emit the "profile-change-net-teardown" notification;
	works around bug https://bugzilla.mozilla.org/show_bug.cgi?id=292699.

2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:

	Remove unused code.

2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

        * configure.ac:

	Require pygtk 2.8. Fixes bug #314557.

2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:

	Mozilla printing code is braindead. Bug #163255.

2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:

	Remove duplicate entries.

2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/EphyBrowser.cpp:

	Only listen for trusted events.

2005-09-04  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-09-04  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.8.0 ===

	* NEWS:
	* configure.ac:

2005-08-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-debug.c:

	Only include execinfo.h if it exists.
