@@ -1,3 +1,12 @@
+2005-09-19  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-window.c: (_ephy_window_set_context_event),
+	(_ephy_window_unset_context_event), (embed_popup_deactivate_cb),
+	(show_embed_popup), (ephy_window_dispose):
+	* src/ephy-window.h:
+
+	Make the methods to unset/release the context event semi-public.
+
 2005-09-16  Raphael Slinckx  <rslinckx@cvs.gnome.org>
 
 	* src/bookmarks/ephy-bookmark-action.c:
